example/error/offline.wxml
<mt-error type="offline"></mt-error>